--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,3 +1,11 @@
 <div class="message">
-  <p><%= message.content %> </p>
+  <a href="" class="message_profile-pic"></a>
+  <a href="" class="message_username"><%= message.user.email %></a> <!-- Chage to user name, add in devise login screen -->
+  <span class="message_timestamp">
+    <%= message.created_at %>
+  </span>
+  <span class="message_star"></span>
+  <span class="message_content"></span>
+    <%= message.content %>
+  </span>
 </div>
